--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,15 @@
       "antd": "^5.0.0",
       "axios": "^1.1.3",
       "dayjs": "^1.11.6",
+      "jodit-react": "^1.3.27",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
       "react-redux": "^8.0.5",
+      "react-router": "^6.4.3",
+      "react-router-dom": "^6.4.3",
       "react-scripts": "5.0.1",
+      "router": "^1.3.7",
       "styled-components": "^5.3.6",
       "web-vitals": "^2.1.4"
    },
@@ -46,5 +50,10 @@
          "last 1 firefox version",
          "last 1 safari version"
       ]
+   },
+   "devDependencies": {
+      "autoprefixer": "^10.4.13",
+      "postcss": "^8.4.19",
+      "tailwindcss": "^3.2.4"
    }
 }
