--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
       "antd": "^5.0.0",
       "axios": "^1.1.3",
       "dayjs": "^1.11.6",
+      "dompurify": "^2.4.1",
       "jodit-react": "^1.3.27",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
@@ -23,6 +24,7 @@
       "react-router": "^6.4.3",
       "react-router-dom": "^6.4.3",
       "react-scripts": "5.0.1",
+      "redux-logger": "^3.0.6",
       "router": "^1.3.7",
       "styled-components": "^5.3.6",
       "web-vitals": "^2.1.4"
