--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
       "redux-logger": "^3.0.6",
       "router": "^1.3.7",
       "styled-components": "^5.3.6",
+      "validator": "^13.7.0",
       "web-vitals": "^2.1.4"
    },
    "scripts": {
