--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
       "dayjs": "^1.11.6",
       "dompurify": "^2.4.1",
       "jodit-react": "^1.3.27",
+      "js-file-download": "^0.4.12",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
@@ -32,7 +33,7 @@
    },
    "scripts": {
       "start": "react-scripts start",
-      "build": "react-scripts build",
+      "build": "react-scripts build && mv build ../server",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
    },
