--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,14 @@
       "cookie-parser": "^1.4.6",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
+      "ejs": "^3.1.8",
       "express": "^4.18.2",
       "helmet": "^6.0.0",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^6.7.2",
       "morgan": "^1.10.0",
       "multer": "^1.4.5-lts.1",
+      "nodemailer": "^6.8.0",
       "sharp": "^0.31.2"
    }
 }
