--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
       "morgan": "^1.10.0",
       "multer": "^1.4.5-lts.1",
       "nodemailer": "^6.8.0",
-      "sharp": "^0.31.2"
+      "sharp": "^0.31.2",
+      "socket.io": "^4.5.4"
    }
 }
