--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
       "react-router": "^6.4.3",
       "react-router-dom": "^6.4.3",
       "react-scripts": "5.0.1",
+      "react-scroll-to-bottom": "^4.2.0",
       "redux-logger": "^3.0.6",
       "router": "^1.3.7",
       "socket.io-client": "^4.5.4",
