--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
       "multer": "^1.4.5-lts.1",
       "nodemailer": "^6.8.0",
       "sharp": "^0.31.2",
-      "socket.io": "^4.5.4"
+      "socket.io": "^4.5.4",
+      "uuid": "^9.0.0"
    }
 }
