--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
       "axios": "^1.1.3",
       "dayjs": "^1.11.6",
       "dompurify": "^2.4.1",
+      "emoji-picker-react": "^4.4.7",
       "jodit-react": "^1.3.27",
       "js-file-download": "^0.4.12",
       "react": "^18.2.0",
