--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,12 @@
       "axios": "^1.1.3",
       "dayjs": "^1.11.6",
       "dompurify": "^2.4.1",
-      "emoji-picker-react": "^4.4.7",
       "jodit-react": "^1.3.27",
       "js-file-download": "^0.4.12",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
+      "react-input-emoji": "^4.3.0",
       "react-redux": "^8.0.5",
       "react-router": "^6.4.3",
       "react-router-dom": "^6.4.3",
