--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
       "dompurify": "^2.4.1",
       "jodit-react": "^1.3.27",
       "js-file-download": "^0.4.12",
+      "jwt-decode": "^3.1.2",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
